@@ -787,8 +787,8 @@
         if (lastUpdated) {
             const now = new Date();
             const pad = n => n.toString().padStart(2, '0');
-            const dateStr = "2025-05-04";
-            const timeStr = "20:34";
+            const dateStr = "2025-05-05";
+            const timeStr = "15:45";
             lastUpdated.textContent = `Last updated: ${dateStr} ${timeStr}`;
         }
     </script>
