@@ -1,4 +1,8 @@
 
+2025-05-05 15:45
+- Fixed a bug with experience for higher levels
+- Improved the optimizer in the case where number of drones is smaller than 5 
+
 2025-05-04 20:34
 - Improved the optimization logic, should now produce much better results than before (but are they optimal? who knows!). Thanks to kontors and Maliciousism for their suggestions
  
